1.0.0PR3 增加查询某人在某个时间段的记录数目接口
